--- a/src/app/pages/products/product-edit/product-edit.component.html
+++ b/src/app/pages/products/product-edit/product-edit.component.html
@@ -57,6 +57,16 @@
                 </div>
               </div>
             </div>
+            <div class="col-sm-6">
+              <div class="form-group mb-4">
+                <label class="font-light">Marge revendeur en %</label>
+                <input class="form-control" autocomplete="off" formControlName="marge_dealer" id="marge_dealer" name="marge_dealer" type="text"
+                  placeholder="Marge en %">
+                <div *ngIf="f.marge_dealer.errors && f.marge_dealer.dirty">
+                  <label class="help-block error" for="name">Ce champ est obligatoire.</label>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="row">
             <div class="col-md-12">
