--- a/src/app/pages/quotation/quotation-edit/quotation-edit.component.html
+++ b/src/app/pages/quotation/quotation-edit/quotation-edit.component.html
@@ -48,12 +48,12 @@
       <div class="modal-body p-4">
         <div>
           <div class="row">
-            <div class="col-6">
+            <div class="col-6" *ngIf="canChangeMarge">
                 <label>Marge <b>%</b>:</label>
                 <input type="text" class="form-control marge" style="background-color: lavender;" [value]="itemMarge" [attr.data-product]="Item.product_id">
             </div>
 
-            <div class="col-6">
+            <div class="col-6" *ngIf="canChangeMargeDealer">
               <label>Marge Revendeur <b>%</b>:</label>
               <input type="text" class="form-control marge-dealer" style="background-color: lavender;" [value]="itemMargeDealer" [attr.data-product]="Item.product_id">
             </div>
