--- a/src/app/pages/supplier/edit-article/edit-article.component.html
+++ b/src/app/pages/supplier/edit-article/edit-article.component.html
@@ -92,7 +92,7 @@
   <div class="modal-footer justify-content-between bg-primary-50">
   
       <div>
-          <button class="btn btn-primary btn-rounded mr-3" type="submit">Mettre à jour</button>
+          <button class="btn btn-primary btn-rounded mr-3" type="submit" [disabled]=" ! canEdit">Mettre à jour</button>
       </div>
       <a class="text-danger" (click)="onRemoveArticle(ID)"><i class="la la-trash font-20"></i></a>
   </div>
