Add mail commercial & logistics

--- a/src/app/pages/supplier/edit-supplier/edit-supplier.component.html
+++ b/src/app/pages/supplier/edit-supplier/edit-supplier.component.html
@@ -21,6 +21,7 @@
               </div>
             </div>
           </div>
+
           <div class="row">
             <div class="col-sm-6">
               <div class="form-group mb-4">
@@ -33,6 +34,25 @@
               </div>
             </div>
           </div>
+
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="form-group mb-4">
+                <label>Adresse email commercials</label>
+                  <tag-input [placeholder]="'Ajouter un adresse email'" [separatorKeyCodes]="[32,188]" formControlName="mail_commercial_cc" id="mail_commercial_cc" name="mail_commercial_cc" theme='dark'></tag-input>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="form-group mb-4">
+                <label>Adresse email logistiques</label>
+                  <tag-input [placeholder]="'Ajouter un adresse email'" [separatorKeyCodes]="[32,188]" formControlName="mail_logistics_cc" id="mail_logistics_cc" name="mail_logistics_cc" theme='dark'></tag-input>
+              </div>
+            </div>
+          </div>
+
           <div class="row">
             <div class="col-md-6">
               <div class="form-group mb-4">
@@ -69,6 +89,7 @@
               </div>
             </div>
           </div>
+
           <div class="row">
             <div class="col-sm-6">
               <div class="form-group mb-4">
@@ -81,6 +102,7 @@
               </div>
             </div>
           </div>
+
 
           <div class="row">
             <div class="col-md-6">
