Status de l'article

--- a/src/app/layouts/app-sidebar/app-sidebar.component.html
+++ b/src/app/layouts/app-sidebar/app-sidebar.component.html
@@ -25,7 +25,7 @@
       <li><a routerLink="/supplier/article/review" routerLinkActive="active">En attente</a></li>
     </ul>
   </li>
-  <li routerLinkActive="active">
+  <li routerLinkActive="active" style="display: none;">
     <a href="href=&quot;javascript:;&quot;">
       <i class="sidebar-item-icon ti-layers-alt"></i>
       <span class="nav-label">Produits</span>
