--- a/src/app/pages/supplier/add-supplier/add-supplier.component.html
+++ b/src/app/pages/supplier/add-supplier/add-supplier.component.html
@@ -106,7 +106,8 @@
             <div class="col-sm-12">
               <div class="form-group mb-4">
                 <label>Adresse email commercials</label>
-                  <tag-input [placeholder]="'Ajouter un adresse email'" [separatorKeyCodes]="[32,188]" formControlName="mail_commercial_cc" id="mail_commercial_cc" name="mail_commercial_cc" theme='dark'></tag-input>
+                  <tag-input [placeholder]="'Ajouter une adresse email'" [separatorKeyCodes]="[32,188]" [secondaryPlaceholder]="'Ajouter des adresses email'"
+                  formControlName="mail_commercial_cc" id="mail_commercial_cc" name="mail_commercial_cc" theme='dark'></tag-input>
               </div>
             </div>
           </div>
@@ -115,7 +116,8 @@
             <div class="col-sm-12">
               <div class="form-group mb-4">
                 <label>Adresse email logistiques</label>
-                  <tag-input [placeholder]="'Ajouter un adresse email'" [separatorKeyCodes]="[32,188]" formControlName="mail_logistics_cc" id="mail_logistics_cc" name="mail_logistics_cc" theme='dark'></tag-input>
+                  <tag-input [placeholder]="'Ajouter une adresse email'" [separatorKeyCodes]="[32,188]" [secondaryPlaceholder]="'Ajouter des adresses email'"
+                  formControlName="mail_logistics_cc" id="mail_logistics_cc" name="mail_logistics_cc" theme='dark'></tag-input>
               </div>
             </div>
           </div>
