Modifier le composant importation

--- a/src/app/layouts/app-sidebar/app-sidebar.component.html
+++ b/src/app/layouts/app-sidebar/app-sidebar.component.html
@@ -40,6 +40,18 @@
   </li>
   <li routerLinkActive="active">
     <a href="href=&quot;javascript:;&quot;">
+      <i class="sidebar-item-icon ti-user"></i>
+      <span class="nav-label">Clients</span>
+      <i class="fa fa-angle-left arrow"></i>
+    </a>
+    <ul class="nav-2-level collapse" routerLinkActive="in">
+      <li>
+        <a routerLink="/client/lists" routerLinkActive="active">Tous les clients</a>
+      </li>
+    </ul>
+  </li>
+  <li routerLinkActive="active">
+    <a href="href=&quot;javascript:;&quot;">
       <i class="sidebar-item-icon ti-layout-media-overlay-alt-2"></i>
       <span class="nav-label">Services</span>
       <i class="fa fa-angle-left arrow"></i>
