--- a/src/app/pages/clients/clients.component.html
+++ b/src/app/pages/clients/clients.component.html
@@ -1,3 +1,33 @@
-<p>
-  clients works!
-</p>
+<div class="page-content fade-in-up">
+  <div class="ibox">
+    <div class="ibox-body">
+      <h5 class="font-strong mb-4">LES CLIENTS</h5>
+      <div class="flexbox mb-4">
+        <div class="flexbox">
+        </div>
+        <div class="flexbox">
+          <div class="input-group-icon input-group-icon-left mr-3">
+            <span class="input-icon input-icon-right font-16"><i class="ti-search"></i></span>
+            <input class="form-control form-control-rounded form-control-solid" id="key-search" type="text"
+                   placeholder="Search ...">
+          </div>
+        </div>
+      </div>
+      <div class="table-responsive row">
+        <table class="table table-bordered table-hover" id="clients-table">
+          <thead class="thead-default thead-lg">
+          <tr>
+            <th>ID</th>
+            <th>Nom</th>
+            <th>Adresse E-mail</th>
+            <th>Type</th>
+            <th>Reference</th>
+            <th>Date d'ajout</th>
+            <th>Actions</th>
+          </tr>
+          </thead>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
