--- a/src/app/pages/clients/clients.component.html
+++ b/src/app/pages/clients/clients.component.html
@@ -31,3 +31,10 @@
     </div>
   </div>
 </div>
+
+
+<div class="modal fade" id="switch-type-modal" data-backdrop="static">
+  <div class="modal-dialog" role="document">
+    <app-type-client-switcher (refresh)="reload()"></app-type-client-switcher>
+  </div>
+</div>
